[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Keiji Suzuki"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the LSM303DLHC (accelerometer + compass)"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "MEMS"]
license = "MIT OR Apache-2.0"
name = "lsm303agr"
repository = "https://github.com/zuki/lsm303agr"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.0"
generic-array = "0.11.0"

[dependencies.cast]
default-features = false
version = "0.2.2"
